# mlx-audio

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md
python/: CMakeLists.txt  README.md  debug_dconv_weights.py  debug_encoder1.py  debug_encoder_layers.py  debug_htdemucs_scaling.py  debug_safetensors_keys.py  mkdocs.yml  pyproject.toml  setup.py
python/benchmarks/: __init__.py  bench_primitives.py  bench_streaming.py  run_benchmarks.py
python/csrc/: CMakeLists.txt  bindings.cpp  bindings_wrappers.h
python/csrc/metal/: pyin.metal  spectral_contrast.metal
python/csrc/primitives/: pyin.cpp  pyin.h  spectral_contrast.cpp  spectral_contrast.h
python/docs/: changelog.md  contributing.md  index.md  installation.md  quickstart.md  troubleshooting.md
python/docs/advanced/: custom-models.md  memory.md  pipelines.md  streaming.md
python/docs/api/: functional.md  models.md  primitives.md  training.md
python/docs/models/: clap.md  deepfilternet.md  encodec.md  htdemucs.md  index.md  musicgen.md  parler-tts.md  silero-vad.md  whisper.md
python/docs/performance/: benchmarks.md  model-comparison.md
python/docs/plans/: pitch_optimization_plan.md
python/docs/reference/: result-types.md
python/docs/tutorials/: training-custom-model.md
python/examples/: README.md  __init__.py  train_clap_finetune.py  train_mnist.py
python/mlx_audio/: __init__.py  _version.py  cli.py  exceptions.py
python/mlx_audio/constants/: __init__.py  algorithms.py  audio_processing.py  paths.py  sample_rates.py  spectral.py
python/mlx_audio/functional/: __init__.py  _audio.py  _clap_tasks.py  _model_utils.py  _utils.py  classify.py  detect_speech.py  diarize.py  embed.py  enhance.py  generate.py  separate.py  speak.py  tag.py  transcribe.py
python/mlx_audio/hub/: __init__.py  cache.py  licenses.py  registry.py
python/mlx_audio/models/: __init__.py
python/mlx_audio/models/banquet/: __init__.py  bandsplit.py  banquet.py  config.py  convert.py  film.py  inference.py  maskestim.py  passt.py  tfmodel.py  utils.py
python/mlx_audio/models/base/: __init__.py  config.py  pretrained.py  protocol.py  weight_converter.py
python/mlx_audio/models/clap/: __init__.py  config.py  convert.py  feature_extractor.py  model.py
python/mlx_audio/models/classifier/: __init__.py  config.py  model.py  train_module.py
python/mlx_audio/models/demucs/: __init__.py  bag.py  config.py  convert.py  inference.py  model.py
python/mlx_audio/models/diarization/: __init__.py  config.py  model.py
python/mlx_audio/models/drums/: __init__.py  config.py  convert.py  data.py  encoder.py  heads.py  loss.py  model.py  train_module.py  transformer.py
python/mlx_audio/models/drumux/: __init__.py  data.py  model.py  precompute_specs.py  train.py  train_module.py
python/mlx_audio/models/encodec/: __init__.py  config.py  convert.py  convert_hf.py  convert_v2.py  model.py  model_hf.py  model_v2.py
python/mlx_audio/models/enhance/: __init__.py  config.py  model.py
python/mlx_audio/models/musicgen/: __init__.py  config.py  convert.py  inference.py  model.py
python/mlx_audio/models/tts/: __init__.py  config.py  convert.py  inference.py  model.py
python/mlx_audio/models/vad/: __init__.py  config.py  convert.py  layers.py  model.py
python/mlx_audio/models/whisper/: __init__.py  config.py  convert.py  inference.py  kv_cache.py  model.py  tokenizer.py
python/mlx_audio/primitives/: __init__.py  _extension.py  _frame_impl.py  _memory_profiler.py  beat.py  convert.py  features.py  filterbanks.py  mel.py  mfcc.py  onset.py  pitch.py  resample.py  spectral_gate.py  windows.py
python/mlx_audio/streaming/: __init__.py  _types.py  base.py  buffer.py  context.py  metrics.py  pipeline.py  processor.py
python/mlx_audio/streaming/adapters/: __init__.py  demucs.py  vad.py
python/mlx_audio/streaming/sinks/: __init__.py  callback.py  file.py  speaker.py
python/mlx_audio/streaming/sources/: __init__.py  callback.py  file.py  microphone.py
python/mlx_audio/train/: __init__.py  memory.py  module.py  precompute.py  stateful.py  trainer.py
python/mlx_audio/train/callbacks/: __init__.py  base.py  checkpoint.py  early_stopping.py  gradient_clip.py  lr_monitor.py  progress.py
python/mlx_audio/train/checkpointing/: __init__.py  manager.py  state.py
python/mlx_audio/types/: __init__.py  audio.py  results.py  vad.py
python/mlx_audio/utils/: __init__.py  audio_io.py  conversion.py  dependencies.py
python/tests/: __init__.py  conftest.py  generate_banquet_fixtures.py  generate_clap_fixtures.py  generate_edge_case_fixtures.py  generate_encodec_fixtures.py  generate_musicgen_fixtures.py  generate_swift_fixtures.py  test_imports.py
python/tests/benchmarks/: __init__.py  conftest.py  test_clap_quality.py  test_encodec_quality.py  test_esc50_benchmark.py  test_htdemucs_bag_parity.py  test_htdemucs_quality.py  test_whisper_quality.py
python/tests/classification/: __init__.py  conftest.py  test_label_processor.py  test_mlp_head.py  test_result_types.py
python/tests/examples/: __init__.py  test_training_examples.py
python/tests/functional/: __init__.py  test_detect_speech.py  test_diarize.py  test_enhance.py
python/tests/integration/: __init__.py  conftest.py  generate_musdb18_fixtures.py  test_esc50_classification.py  test_musdb18_separation.py
python/tests/parity/: __init__.py  generate_references.py  generate_swift_dsp_parity_data.py  test_stft_parity.py  test_training_parity.py
python/tests/primitives/: __init__.py  test_beat.py  test_beat_parity.py  test_onset.py  test_onset_parity.py  test_pitch.py  test_pitch_parity.py  test_spectral_gate.py
python/tests/streaming/: __init__.py  test_buffer.py  test_context.py  test_pipeline.py  test_processor.py  test_vad_processor.py  test_validation.py
python/tests/train/: __init__.py  test_loggers.py
python/tests/transforms/: __init__.py  test_audio_augmentations.py  test_audio_parity.py
python/tests/tts/: __init__.py  test_parler_parity.py  test_parler_parity_pt.py  test_speak.py
(+295 files in other folders)
